# dogs-django

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dogs/dogs/: asgi.py  settings.py  urls.py  wsgi.py
dogs/dogs_api/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
dogs/dogs_api/migrations/: 0001_initial.py
dogs/dogs_api/models/: __init__.py  models.py
